tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImportInEs5.errors.txt
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(1,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(2,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(3,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(4,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(5,8): error TS2300: Duplicate identifier 'defaultBinding'.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(6,8): error TS2300: Duplicate identifier 'defaultBinding'.


==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_0.ts (0 errors) ====
    
    export var a = 10;
    export var x = a;
    export var m = a;
    
==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts (6 errors) ====
    import defaultBinding, { } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { a } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { a as b } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { x, a as y } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { x as z,  } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.
    import defaultBinding, { m,  } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'defaultBinding'.